# spectionary

./: .gitignore  README.md  pyproject.toml
backend/: connection_manager.py  game_logic.py  main.py  timer.py  webhook_manager.py  words.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.test.tsx  App.tsx  CreateRoomView.tsx  Message.ts  MessageBubble.tsx  User.ts  index.css
frontend/src/components/: ChatView.tsx  CreateRoom.tsx  GameView.tsx  InputUser.tsx  JoinRoom.tsx  JoinRoomView.tsx  MessageBubble.tsx  Spectionary.tsx  Timer.tsx  Waves.tsx  styles.ts
frontend/src/hooks/: useCountdown.ts
