[tool.poetry]
name = "speckle-pictionary"
version = "0.1.0"
description = ""
authors = ["Jonas Bernhard <jonasbernhard96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.77.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
